# kamping-examples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bfs.cpp  bfs_.cpp  edge_ping_pong.cpp  loc_stats.csv  mpi_spd_formatters.hpp  sorting.cpp  type_ping_pong.cpp  vector_allgather.cpp
bfs/: bfs_algorithm.hpp  boost.hpp  common.hpp  kamping.hpp  kamping_flattened.hpp  kamping_grid.hpp  kamping_sparse.hpp  mpi.hpp  mpi_neighborhood.hpp  mpi_neighborhood_dynamic.hpp  mpl.hpp  rwth_mpi.hpp  utils.hpp
detail/: boost.hpp  kamping.hpp  mpi.hpp  mpi_new.hpp  mpl.hpp  rwth.hpp
evaluation/: Pipfile  count_lines.py  evaluation.py  logparser.py  make_bfs_csv.py  make_bfs_plot.py  make_sorting_csv.py  make_sorting_plot.py  run_LOC_counting  run_counting.sh
executables/: bfs.cpp  sorting.cpp  type_ping_pong.cpp  vector_allgather.cpp
experiment_suites/: bfs.suite.horeka.yaml  bfs.suite.yaml  sorting.suite.horeka.yaml  sorting.suite.yaml  sorting_powerof2.suite.yaml
experiments/: bfs-mpich.suite.yaml  bfs.small.suite.yaml  bfs.suite.yaml  bfs.tiny.suite.yaml  edge_pingpong.suite.yaml  expcore.py  run-experiments.py  runners.py  sorting.suite.yaml  sorting_correct_seed.suite.yaml  sorting_debug.suite.yaml  sorting_new.suite.yaml  sorting_no_check.suite.yaml  sorting_ompi.suite.yaml  type_ping_pong.suite.yaml
include/: mpi_spd_formatters.hpp
include/bfs/: bfs_algorithm.hpp  common.hpp  utils.hpp
include/bfs/bindings/: boost.hpp  kamping.hpp  kamping_flattened.hpp  kamping_grid.hpp  kamping_sparse.hpp  mpi.hpp  mpi_neighborhood.hpp  mpi_neighborhood_dynamic.hpp  mpl.hpp  rwth_mpi.hpp
include/sorting/: boost.hpp  common.hpp
include/sorting/bindings/: boost.hpp  kamping.hpp  kamping_flattened.hpp  mpi.hpp  mpi_new.hpp  mpi_rdma.hpp  mpl.hpp  rwth.hpp  rwth_mpi.hpp
include/vector_allgather/: boost.hpp  kamping.hpp  mpi.hpp  mpl.hpp  rwth.hpp  rwth_mpi.hpp
non_cpp_code/python/: Pipfile  sorting.py
non_cpp_code/rust/src/: main.rs
python/: sorting.py
rust/: Cargo.toml
rust/src/: main.rs
sorting/: kamping.hpp  mpi.hpp  mpi_new.hpp  mpl.hpp
